@@ -1,0 +1,97 @@
+# Translations of superatom labels to SMILES.
+# First atom of SMILES string should be the one connected to the rest of
+# the molecule.
+# Empty lines and lines starting with # are ignored.
+# Also check spelling.txt to see that the superatom label
+# is correctly spelled.
+
+MeO      OC
+MeS      SC
+MeN      NC
+CF       CF
+CF3      C(F)(F)F
+CN       C#N
+F3CN     NC(F)(F)F
+Ph       c1ccccc1
+NO       N=O
+NO2      N(=O)=O
+N(OH)CH3 N(O)C
+SO3H     S(=O)(=O)O
+COOH     C(=O)O
+nBu      CCCC
+EtO      OCC
+OiBu     OCC(C)C
+iPr      CCC
+tBu      C(C)(C)C
+Ac       C(=O)C
+AcO      OC(=O)C
+NHAc     NC(=O)C
+OR       O*
+#BzO      OCc1ccccc1
+BzO OC(=O)C1=CC=CC=C1
+THPO     O[C@@H]1OCCCC1
+
+CHO    C=O
+NOH    NO 
+
+# Added  release 1.3.0
+CO2Et C(=O)OCC
+CO2Me C(=O)OC
+MeO2S S(=O)(=O)C
+NMe2  N(C)C
+CO2R  C(=O)O*
+ZNH  NC(=O)OCC1=CC=CC=C1
+HOCH2 CO
+H2NCH2 CN
+Et CC
+BnO OCC1=CC=CC=C1
+AmNH	NCCCCC
+AmO	OCCCCC
+AmO2C	C(=O)OCCCCC
+AmS	SCCCCC
+BnNH	NCC1=CC=CC=C1
+BnO2C	C(=O)OCC1=CC=CC=C1
+Bu3Sn	[Sn](CCCC)(CCCC)CCCC
+BuNH	NCCCC
+BuO	OCCCC
+BuO2C	C(=O)OCCCC
+BuS	SCCCC
+CBr3	C(Br)(Br)Br
+CbzNH	NC(=O)OCC1=CC=CC=C1
+CCl3	C(Cl)(Cl)Cl
+ClSO2	S(Cl)(=O)=O
+COBr    C(=O)Br
+COBu    C(=O)CCCC
+COCF3   C(=O)C(F)(F)F
+COCl    C(=O)Cl
+COCO    C(=O)C=O
+COEt    C(=O)CC
+COF     C(=O)F
+COMe    C(=O)C
+CONEt2  C(=O)(CC)NCC
+CONH2   C(=O)N
+CONHEt  C(=O)NCC
+CONHMe  C(=O)NC
+CONMe2  C(=O)(C)NC
+COSH    C(=O)S
+Et2N    N(CC)CC
+Et3N    N(CC)(CC)CC
+EtNH    NCC
+H2NSO2  S(=O)(N)=O
+HONH    ON
+Me2N    N(C)C
+MsO     CS(O)(=O)=O
+NCO     N=C=O
+NCS     N=C=S
+NHAm    NCCCCC
+NHBn    NCC1=CC=CC=C1
+NHBu    NCCCC
+NHEt    NCC
+NHOH    NO
+NHPr    NCCC
+NO      N=O
+POEt2   P(OCC)OCC
+POEt3   P(OCC)(OCC)OCC
+POOEt2  P(=O)(OCC)OCC
+PrNH    CCCN
+SEt     SCC
